--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
-    "passport": "^0.7.0"
-  }
+    "passport": "^0.7.0",
+    "simple-update-notifier": "^2.0.0"
+  },
+  "name": "gohire",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
