--- a/applicant-server/package.json
+++ b/applicant-server/package.json
@@ -17,9 +17,8 @@
     "middleware": "^1.0.0",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
-    "passport": "^0.7.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "passport": "^0.7.0",
+    "simple-update-notifier": "^1.0.0"
   }
 }
