--- a/applicant-server/package.json
+++ b/applicant-server/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "fs": "^0.0.1-security",
     "fuse.js": "^7.1.0",
     "middleware": "^1.0.0",
     "mongoose": "^8.10.1",
