--- a/applicant-server/package.json
+++ b/applicant-server/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
+    "path": "^0.12.7",
     "simple-update-notifier": "^2.0.0"
   },
   "devDependencies": {
