--- a/applicant-server/.env
+++ b/applicant-server/.env
@@ -1,1 +1,2 @@
 MONGO_URI_APPLICANTS=mongodb+srv://gohire:gohire12345678@gohire.kzwudx0.mongodb.net/goHire_applicants?retryWrites=true&w=majority&appName=GoHire
+MONGO_URI_RECRUITERS=mongodb+srv://gohire:gohire12345678@gohire.kzwudx0.mongodb.net/goHire_recruiters?retryWrites=true&w=majority&appName=GoHire
