--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "gridfs-stream": "^1.1.1",
     "mongoose": "^8.13.2",
     "passport": "^0.7.0",
