--- a/admin-server/.env
+++ b/admin-server/.env
@@ -1,1 +1,2 @@
 MONGO_URI_ADMIN=mongodb+srv://gohire:gohire12345678@gohire.kzwudx0.mongodb.net/goHire_admin?retryWrites=true&w=majority&appName=GoHire
+MONGO_URI_RECRUITERS=mongodb+srv://gohire:gohire12345678@gohire.kzwudx0.mongodb.net/goHire_recruiters?retryWrites=true&w=majority&appName=GoHire
