applicant list in admin server done

--- a/admin-server/.env
+++ b/admin-server/.env
@@ -1,2 +1,3 @@
 MONGO_URI_ADMIN=mongodb+srv://gohire:gohire12345678@gohire.kzwudx0.mongodb.net/goHire_admin?retryWrites=true&w=majority&appName=GoHire
 MONGO_URI_RECRUITERS=mongodb+srv://gohire:gohire12345678@gohire.kzwudx0.mongodb.net/goHire_recruiters?retryWrites=true&w=majority&appName=GoHire
+MONGO_URI_APPLICANT=mongodb+srv://gohire:gohire12345678@gohire.kzwudx0.mongodb.net/goHire_applicants?retryWrites=true&w=majority&appName=GoHire
