--- a/applicant-server/package.json
+++ b/applicant-server/package.json
@@ -25,13 +25,10 @@
     "mongoose": "^8.14.1",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.2",
+    "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "path": "^0.12.7",
     "sequelize": "^6.37.6",
-    "simple-update-notifier": "^1.1.0",
     "sqlite3": "^5.1.7"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
   }
 }
